--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -143,7 +143,7 @@ p {
 
 p a {
   color:inherit;
-  border-bottom: 2px solid #999;
+  border-bottom: 2px solid #bebebe;
   }
   
 p a:hover {
@@ -368,7 +368,7 @@ div.input-group {margin: 10px 0;}
   }
 
 #galleries ul {
-  margin-top:5px;
+  margin-top:18px;
   }
     
 #galleries ul:first-child {
