--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -514,9 +514,31 @@ footer p, footer p a, footer li, footer li a {
 
 /* Overlay related styles */
 #projects-demo li, 
-ul.program-peers li {
-  cursor: pointer;
-}
+ul.program-peers {
+  cursor: pointer;  
+ }
+ 
+.program-list li a {
+   border-bottom: 2px solid #bebebe;
+   cursor:pointer;
+   color: #333;
+   }
+   
+.program-list li a:hover {
+  color:inherit;
+  text-decoration: none;
+  border-bottom: 2px solid #FF4C47;
+  }
+  
+.program-list li a:active {
+  color:#FF4C47;
+  text-decoration: none;
+  border-bottom: 2px solid #FF4C47;
+  }
+   
+.program-list li {
+   margin-top: 5px;
+   }
 
 .student-overlay {
   z-index: 9000;
