--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -510,36 +510,11 @@ footer p, footer p a, footer li, footer li a {
   footer {
     text-align: left;
   }
-]
+  
+}
 
 
 /* Overlay related styles */
-#projects-demo li, 
-ul.program-peers {
-  cursor: pointer;  
- }
- 
-.program-list li a {
-   border-bottom: 2px solid #bebebe;
-   cursor:pointer;
-   color: #333;
-   }
-   
-.program-list li a:hover {
-  color:inherit;
-  text-decoration: none;
-  border-bottom: 2px solid #FF4C47;
-  }
-  
-.program-list li a:active {
-  color:#FF4C47;
-  text-decoration: none;
-  border-bottom: 2px solid #FF4C47;
-  }
-   
-.program-list li {
-   margin-top: 5px;
-   }
 
 .student-overlay {
   z-index: 9000;
@@ -553,13 +528,13 @@ ul.program-peers {
   padding: 0;
   margin: 0;
   border: 10px solid #EEE;
-}
+  }
 
 .student-overlay img.logo {
   position: fixed;
   left: 45px;
   bottom: 45px;
-}
+  }
 
 .student-overlay .close {
   float: none;
@@ -570,49 +545,78 @@ ul.program-peers {
   height: 1em;
   width: 1em;
   z-index: 9001;
-}
+  }
 
 @media (min-width: 768px) {
   .student-overlay {
     border: 15px solid #EEE;
-  }
-}
+    }
+    }
 
 @media (min-width: 992px) {
   .student-overlay {
     border: 20px solid #EEE;
-  }
+    }
   .student-overlay .close {
     top:7px;
     right:9px;
-  }
+    }
   
-}
+  }
 
 .student-overlay .container {
   padding-top: 30px;
-}
+  }
 .student-overlay ul {
   padding: 0;
-}
+  }
 
 .student-overlay h2 {
+  font-size: 36px;
   margin: 0;
-}
+  }
 
 .student-overlay h2:last-of-type {
   margin-bottom: .66em;
-}
+  }
+  
+.student-statement {
+  padding-right: 5%;
+  padding-bottom: 30px;
+  }
+  
+.program-list ul {
+    padding-bottom: 30px;
+    }
 
-.program-peers ul li {
-  cursor: pointer;
-}
+.program-list li a {
+   border-bottom: 2px solid #bebebe;
+   cursor:pointer;
+   color: #333;
+   }
+  
+.program-list li a:hover {
+  color:inherit;
+  text-decoration: none;
+  border-bottom: 2px solid #FF4C47;
+  }
+  
+.program-list li a:active {
+  color:#FF4C47;
+  text-decoration: none;
+  border-bottom: 2px solid #FF4C47;
+  }
+   
+.program-list li {
+  margin-top: 5px;
+  }
+
+
 
 #slideshow {
   margin-bottom: 30px;
 }
 
-.student-overlay article { padding-bottom: 30px; }
 
 .student-overlay .student-info ul.nav-pills {
   font-size: 1.5em;
