--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -632,15 +632,34 @@ footer p, footer p a, footer li, footer li a {
   margin-bottom: 30px;
   }
   
+.carousel-control {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 15%;
+  font-size: 20px;
+  color: #000;
+  text-align: center;
+  text-shadow: 0 1px 2px rgba(255, 255, 255, .75);
+  filter: alpha(opacity=75);
+  opacity: .75;
+  }
+
 .carousel-control.left, .carousel-control.right {
   background-image: none;
   background-color: rgba(255, 255, 255, 0);
   }
   
 .carousel-control.left:focus, .carousel-control.right:focus {
+  color: #FF4C47;
   background-image: none;
   background-color: rgba(255, 255, 255, 0.75);
   }
+  
+  
+.glyphicon-chevron-left {left: 20%;}
+.glyphicon-chevron-right {right: 20%;}
 
 
 
