--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -644,6 +644,17 @@ footer p, footer p a, footer li, footer li a {
   text-shadow: 0 1px 2px rgba(255, 255, 255, .75);
   filter: alpha(opacity=75);
   opacity: .75;
+  text-align: center;
+  }
+  
+@media screen and (min-width: 768px) {
+  .carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right, .carousel-control .icon-prev, .carousel-control .icon-next {
+  width: 30px;
+  height: 30px;
+  margin-top: -15px;
+  /* margin-left: -15px; */
+  font-size: 30px;
+  }
   }
 
 .carousel-control.left, .carousel-control.right {
