--- a/css/kbadd.css
+++ b/css/kbadd.css
@@ -53,4 +53,9 @@ body { padding-top: 60px; }
   margin-bottom: 0;
 }
 
+.imgwrap img {
+  width: 100%;
+  max-width: 100%;
+  margin-top: -175px;
+}
 
