--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -627,6 +627,10 @@ footer p, footer p a, footer li, footer li a {
 
 /* Student Overlay Slideshow Shite */
 
+div.carousel-inner {
+  height: 
+  }
+
 #slideshow {
   margin-bottom: 30px;
   }
@@ -640,7 +644,6 @@ footer p, footer p a, footer li, footer li a {
   font-size: 20px;
   color: #000;
   text-align: center;
-  text-shadow: 0 1px 2px rgba(255, 255, 255, .75);
   filter: alpha(opacity=75);
   opacity: .75;
   text-align: center;
@@ -659,17 +662,16 @@ footer p, footer p a, footer li, footer li a {
 .carousel-control.left, .carousel-control.right {
   background-image: none;
   background-color: rgba(255, 255, 255, 0);
+    text-shadow: 0 0 10px rgba(255, 255, 255, .75);
   }
   
-.carousel-control.left:focus, .carousel-control.right:focus {
+.carousel-control.left:hover, .carousel-control.right:hover {
   color: #FF4C47;
   background-image: none;
   background-color: rgba(255, 255, 255, 0.75);
+   text-shadow: 0;
   }
   
   
 .carousel-control .glyphicon-chevron-left {left: 10%;}
 .carousel-control .glyphicon-chevron-right {right: 10%;}
-
-
-
