--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -655,11 +655,7 @@ footer p, footer p a, footer li, footer li a {
   
 @media screen and (min-width: 768px) {
   .carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right, .carousel-control .icon-prev, .carousel-control .icon-next {
-  width: 30px;
-  height: 30px;
-  margin-top: -15px;
-  /* margin-left: -15px; */
-  font-size: 30px;
+  margin-left: 0;
   }
   }
 
