--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -605,7 +605,6 @@ footer p, footer p a, footer li, footer li a {
   }
   
 .student-overlay .student-info ul.nav-pills {
-  font-size: 1.5em;
   margin-bottom: 1em;
 }
 
@@ -616,7 +615,60 @@ footer p, footer p a, footer li, footer li a {
 .student-overlay .student-info ul.student-nav li {
   margin-right: 1em;
   cursor: pointer;
+  
 }
+
+.nav-pills > li {float: none;}
+
+.student-overlay ul.nav > li > a {
+  color: #000;
+  padding: 0;
+  padding-top: 16px;
+  border-bottom: 2px solid #bebebe;
+  letter-spacing: 0;
+  }
+  
+.student-overlay ul.nav > li > a:hover {
+  color:inherit;
+  text-decoration: none;
+  border-bottom: 2px solid #FF4C47;
+  }
+  
+.student-overlay ul.nav > li > a:active {
+  color:#FF4C47;
+  text-decoration: none;
+  border-bottom: 2px solid #FF4C47;
+  }
+  
+.overlay-nav-icon {
+   width:43px;
+   height:21px; 
+   }
+
+.overlay-nav-icon .previous {
+  
+  }
+  
+.overlay-nav-icon .previous {
+  
+  }
+  
+.overlay-nav-icon .previous {
+  
+  }
+  
+.overlay-nav-icon .previous {
+  
+  }
+  
+.overlay-nav-icon .previous {
+  
+  }
+  
+.overlay-nav-icon .previous {
+  
+  }
+  
   
 .student-statement {
   padding-right: 5%;
