--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -510,7 +510,7 @@ ul.grid-display .thumb .block .info p {
 /* Footer Styles ************************/
 
 footer {
-  background-color: #dadada;
+  background-color:#f1f2f2;
   margin-top: 4em;
   min-height: 10em;
   padding-top: 4em;
@@ -757,4 +757,8 @@ footer p, footer p a, footer li, footer li a {
 	}
 ::-moz-selection {
 	background: #FF4C47; /* Firefox */
+}
+
+a.menu_links {
+    cursor: pointer;
 }
