--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -706,7 +706,6 @@ footer p, footer p a, footer li, footer li a {
 #slideshow {
   margin-bottom: 30px;
   text-align: center;
-  background: #EEEEEE;
   }
   
 .carousel-inner > .item {
@@ -733,10 +732,13 @@ footer p, footer p a, footer li, footer li a {
   }
   
 @media screen and (min-width: 768px) {
-  .carousel-control .glyphicon-chevron-left, .carousel-control .glyphicon-chevron-right, .carousel-control .icon-prev, .carousel-control .icon-next {
-  margin-left: 0;
+  .carousel-control .glyphicon-chevron-left, 
+  .carousel-control .glyphicon-chevron-right, 
+  .carousel-control .icon-prev, 
+  .carousel-control .icon-next {
+    margin-left: 0;
   }
-  }
+}
 
 .carousel-control.left, .carousel-control.right {
   background-image: none;
