--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -499,8 +499,8 @@ ul.grid-display .thumb .block .info p {
   margin: 0;
   padding: 0;
   font-weight: normal;
-  letter-spacing: 1px;
 }
+
 
 #intro { padding-top: 0; }
 @media (min-width: 768px) {
@@ -759,10 +759,13 @@ footer p, footer p a, footer li, footer li a {
 
 ::selection {
 	background: #FF4C47; /* Safari */
+	color:white;
 	}
 ::-moz-selection {
 	background: #FF4C47; /* Firefox */
-}
+	color:white;
+	}
+
 
 a.menu_links {
     cursor: pointer;
