--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -615,17 +615,9 @@ footer p, footer p a, footer li, footer li a {
   margin-bottom: 1em;
 }
 
-.student-overlay .student-info ul.student-links li:first-child {
-  margin-right: .5em;
-}
-
 .student-overlay .student-info ul.student-nav li {
-  margin-right: 1em;
-  cursor: pointer;
-  
+  cursor: pointer;  
 }
-
-.nav-pills > li {float: none;}
 
 .student-overlay ul.nav > li > a {
   color: #000;
@@ -633,47 +625,51 @@ footer p, footer p a, footer li, footer li a {
   padding-top: 16px;
   border-bottom: 2px solid #bebebe;
   letter-spacing: 0;
+  background-color: transparent;
   }
   
 .student-overlay ul.nav > li > a:hover {
   color:inherit;
   text-decoration: none;
   border-bottom: 2px solid #FF4C47;
+  background-color: transparent;
   }
   
 .student-overlay ul.nav > li > a:active {
   color:#FF4C47;
   text-decoration: none;
   border-bottom: 2px solid #FF4C47;
+  background-color: transparent;
   }
   
 .overlay-nav-icon {
+  display: block;
    width:43px;
    height:21px; 
    }
 
-.overlay-nav-icon .next {
-  background-image:url('../img/icon_next.png');
+.overlay-nav-icon.next {
+  background-image:url('icon_next.png');
   }
   
-.overlay-nav-icon .next:hover, .overlay-nav-icon .next:active {
-  background-image:url('../img/icon_next_over.png');  
+.overlay-nav-icon.next:hover, .overlay-nav-icon.next:active {
+  background-image:url('icon_next_over.png');  
   }
   
 .overlay-nav-icon .previous {
-  background-image:url('../img/icon_previous.png');  
+  background-image:url('icon_previous.png');  
   }
   
-.overlay-nav-icon .previous:hover, .overlay-nav-icon .previous:active {
-  background-image:url('../img/icon_previous_over.png');  
+.overlay-nav-icon.previous:hover, .overlay-nav-icon.previous:active {
+  background-image:url('icon_previous_over.png');  
   }
   
 .overlay-nav-icon .random {
-  background-image:url('../img/icon_random.png');  
+  background-image:url('icon_random.png');  
   }
   
-.overlay-nav-icon .random:hover, .overlay-nav-icon .random:active {
-  background-image:url('../img/icon_random_over.png');  
+.overlay-nav-icon.random:hover, .overlay-nav-icon.random:active {
+  background-image:url('icon_random_over.png');  
   }
   
   
