--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -142,36 +142,51 @@ p {
 p a {
   color:inherit;
   border-bottom: 2px solid #bebebe;
-  }
+}
   
 p a:hover {
   color:inherit;
   text-decoration: none;
   border-bottom: 2px solid #FF4C47;
-  }
+}
   
 p a:active {
   color:#FF4C47;
   text-decoration: none;
   border-bottom: 2px solid #FF4C47;
-  }
+}
   
 article p {
   margin-bottom: 15px;
-  }
+}
   
 /* General Styles... */
-body { padding-top: 60px; }
-
-@media (min-width: 768px) {
-  body { padding-top: 0; }
+::selection {
+  background: #FF4C47; /* Safari */
+  color:white;
+  }
+::-moz-selection {
+  background: #FF4C47; /* Firefox */
+  color:white;
+  }
+  
+a,
+.menu_links,
+.student.thumb,
+.program-list li,
+.student-overlay .student-info ul.student-nav li {
+  cursor: pointer;
 }
 
+body { padding-top: 60px; }
 #intro { padding-top: 0 !important; }
 
 @media (min-width: 768px) {
+  body { padding-top: 0; }
   #intro { padding-top: .66em !important; }
 }
+
+main { position: relative; }
 
 /* Image Header Styles ******************/
 header {
@@ -365,6 +380,45 @@ div.input-group {
   box-shadow: none;
 }
 
+/* mobile nav styling */
+.navbar a.brand img {
+  height: 50px;
+  width: 50px;
+  margin: 5px;
+}
+
+.navbar-default {
+    background-color: white;
+    border-color: #FE625A;
+}
+
+.navbar-toggle {
+  margin: 10px;
+  padding: 10px;
+  height: 40px;
+}
+
+.navbar-toggle .icon-bar {
+  width: 40px;
+  height: 3px;
+  border-radius: 6px;
+  border: 1px solid transparent;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #FE625A;
+}
+
+.navbar-fixed-top ul.nav {
+  margin-top: 0;
+  padding: 0 13px;
+}
+.navbar-fixed-top ul.nav > li > a {
+  padding-top: 6px;
+  padding-bottom: 6px;
+  border-bottom: 1px solid #FF4C47;
+}
+
 /* Gallery Section Styles ******************/
 #galleries img { 
   width: 100%;
@@ -394,7 +448,7 @@ main article {
   padding: 2em 0;
 }
 
-.affix-top, .affix {
+.affix-top, .affix, .affix-bottom {
   position: static;
 }
 
@@ -412,6 +466,15 @@ main article {
     width: inherit;
     max-width: 165px;
     z-index: 99;
+  }
+
+  .affix-bottom {
+    position: fixed;
+    bottom: 321px;
+    top: inherit;
+    width: inherit;
+    max-width: 165px;
+    z-index: 1;
   }
 
   #intro p.lead {
@@ -536,26 +599,23 @@ footer {
   min-height: 10em;
   padding-top: 4em;
   padding-bottom: 6em;
-  text-align: left;
+  text-align: center;
 }
 
 footer img, footer p, footer ul {
   margin-bottom: 20px;
 }
 
-footer p, footer p a, footer li, footer li a {
-  color: rgb(100,100,100);
+footer p, footer a, footer li {
+  color: #646464;
   font-weight: 500; 
-  }
+}
   
-  
-
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
   footer {
     text-align: left;
   }
-  
 }
   
 /* Overlay related styles */
@@ -568,11 +628,16 @@ footer p, footer p a, footer li, footer li a {
   bottom:0;
   left:0;
   right:0;
-  overflow: scroll;
+  overflow: auto;
   padding: 0;
   margin: 0;
   border: 10px solid #EEE;
-  }
+}
+
+.critical .student-overlay {
+  position: static;
+  overflow: auto;
+}
 
 .student-overlay img.logo {
   position: static;
@@ -580,12 +645,12 @@ footer p, footer p a, footer li, footer li a {
   margin: 0 auto 20px auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (min-height: 580px) {
   .student-overlay img.logo {
     position: fixed;
     left: 45px;
     bottom: 45px;
-    }
+  }
 }
 
 .student-overlay .close {
@@ -636,9 +701,6 @@ footer p, footer p a, footer li, footer li a {
   margin-bottom: 1em;
 }
 
-.student-overlay .student-info ul.student-nav li {
-  cursor: pointer;  
-}
 
 .student-overlay ul.nav > li > a {
   color: #000;
@@ -665,25 +727,25 @@ footer p, footer p a, footer li, footer li a {
   
 .overlay-nav-icon {
   display: block;
-   width:43px;
-   height:21px; 
-   }
+  width:43px;
+  height:21px; 
+}
 
 .overlay-nav-icon.next {
   background-image:url('icon_next.png');
-  }
+}
   
 .overlay-nav-icon.next:hover, .overlay-nav-icon.next:active {
   background-image:url('icon_next_over.png');  
-  }
+}
   
 .overlay-nav-icon .previous {
   background-image:url('icon_previous.png');  
-  }
+}
   
 .overlay-nav-icon.previous:hover, .overlay-nav-icon.previous:active {
   background-image:url('icon_previous_over.png');  
-  }
+}
   
 .overlay-nav-icon .random {
   background-image:url('icon_random.png');  
@@ -691,29 +753,28 @@ footer p, footer p a, footer li, footer li a {
   
 .overlay-nav-icon.random:hover, .overlay-nav-icon.random:active {
   background-image:url('icon_random_over.png');  
-  }
+}
   
   
 .student-statement {
   padding-right: 5%;
   padding-bottom: 30px;
-  }
+}
   
 .program-list ul {
-    padding-bottom: 30px;
-    }
+  padding-bottom: 30px;
+}
 
 .program-list li a {
-   border-bottom: 2px solid #bebebe;
-   cursor:pointer;
-   color: #333;
-   }
+  border-bottom: 2px solid #bebebe;
+  color: #333;
+}
   
 .program-list li a:hover {
   color:inherit;
   text-decoration: none;
   border-bottom: 2px solid #FF4C47;
-  }
+}
   
 .program-list li a:active {
   color:#FF4C47;
@@ -723,27 +784,31 @@ footer p, footer p a, footer li, footer li a {
    
 .program-list li {
   margin-top: 5px;
-  }
+}
 
-/* Student Overlay Slideshow Shite */
-
+/* Student Overlay Slideshow */
 #slideshow {
   margin-bottom: 30px;
   text-align: center;
   min-height: 200px;
   max-height: 600px;
   }
-  
+
+.carousel-inner,  
 .carousel-inner > .item {
   height: 600px;
   text-align: center;
   }
 
-.carousel-inner > .item > img {
+.carousel-inner > .item > img, 
+.carousel-inner > .item > a > img {
+  display: block;
   max-height: 100%;
-  }
+  max-width: auto;
+  height: auto;
+  margin: 0 auto;
+}
 
-  
 .carousel-control {
   position: absolute;
   top: 0;
@@ -770,28 +835,29 @@ footer p, footer p a, footer li, footer li a {
   background-image: none;
   background-color: rgba(255, 255, 255, 0);
   text-shadow: 0 0 10px rgba(255, 255, 255, .75);
-  }
+}
   
 .carousel-control.left:hover, .carousel-control.right:hover {
   color: #FF4C47;
   background-image: none;
   background-color: rgba(255, 255, 255, 0.75);
    text-shadow: 0;
-  }
-  
-  
+}
+
 .carousel-control .glyphicon-chevron-left {left: 10%;}
 .carousel-control .glyphicon-chevron-right {right: 10%;}
 
-::selection {
-  background: #FF4C47; /* Safari */
-  color:white;
-  }
-::-moz-selection {
-  background: #FF4C47; /* Firefox */
-  color:white;
-  }
-
-a.menu_links {
-  cursor: pointer;
+.showtime {
+  margin-bottom: 20px;
 }
+
+.showtime p.lead {
+  margin-bottom: 0;
+}
+
+.imgwrap img {
+  width: 100%;
+  max-width: 100%;
+  margin-top: -175px;
+}
+
