--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -332,7 +332,7 @@ nav a:active {
   text-decoration: none;
 }
   
-ul.nav > li > a {
+.mainnav > li > a {
   color:#000;
   border-radius: 0;
   margin: 0;
@@ -591,6 +591,21 @@ ul.grid-display .thumb .block .info p {
   font-weight: normal;
 }
 
+/* ?? */
+.showtime {
+  margin-bottom: 20px;
+}
+
+.showtime p.lead {
+  margin-bottom: 0;
+}
+
+.imgwrap img {
+  width: 100%;
+  max-width: 100%;
+  margin-top: -175px;
+}
+
 /* Footer Styles ************************/
 
 footer {
@@ -683,78 +698,82 @@ footer p, footer a, footer li {
 
 .student-overlay .container {
   padding-top: 30px;
-  }
+}
+
 .student-overlay ul {
   padding: 0;
-  }
+}
 
 .student-overlay h2 {
   font-size: 36px;
   margin: 0;
-  }
+}
 
 .student-overlay h2:last-of-type {
   margin-bottom: .66em;
-  }
-  
-.student-overlay .student-info ul.nav-pills {
-  margin-bottom: 1em;
 }
 
-
-.student-overlay ul.nav > li > a {
+.student-links li a {
+  display: block;
   color: #000;
   padding: 0;
   padding-top: 16px;
   border-bottom: 2px solid #bebebe;
   letter-spacing: 0;
   background-color: transparent;
-  }
+  width: 100%;
+}
   
-.student-overlay ul.nav > li > a:hover {
+.student-links li a:hover {
   color:inherit;
   text-decoration: none;
   border-bottom: 2px solid #FF4C47;
   background-color: transparent;
-  }
+}
   
-.student-overlay ul.nav > li > a:active {
+.student-links li a:active {
   color:#FF4C47;
   text-decoration: none;
   border-bottom: 2px solid #FF4C47;
   background-color: transparent;
-  }
-  
-.overlay-nav-icon {
-  display: block;
-  width:43px;
-  height:21px; 
 }
 
-.overlay-nav-icon.next {
+.student-nav { margin-bottom: 30px; }
+
+.student-nav .overlay-nav-icon {
+  display: block;
+  width: 43px;
+  height:21px; 
+  margin: 0;
+  padding: 0;
+}
+
+.next .overlay-nav-icon {
   background-image:url('icon_next.png');
 }
   
-.overlay-nav-icon.next:hover, .overlay-nav-icon.next:active {
+.next .overlay-nav-icon:hover,
+.next .overlay-nav-icon:active {
   background-image:url('icon_next_over.png');  
 }
   
-.overlay-nav-icon .previous {
-  background-image:url('icon_previous.png');  
+.previous .overlay-nav-icon {
+  background-image:url('icon_prev.png');  
 }
   
-.overlay-nav-icon.previous:hover, .overlay-nav-icon.previous:active {
-  background-image:url('icon_previous_over.png');  
+.previous .overlay-nav-icon:hover,
+.previous .overlay-nav-icon:active {
+  background-image:url('icon_prev_over.png');  
 }
   
-.overlay-nav-icon .random {
+.random .overlay-nav-icon {
   background-image:url('icon_random.png');  
   }
   
-.overlay-nav-icon.random:hover, .overlay-nav-icon.random:active {
+.random .overlay-nav-icon:hover,
+.random .overlay-nav-icon:active {
   background-image:url('icon_random_over.png');  
 }
-  
   
 .student-statement {
   padding-right: 5%;
@@ -763,6 +782,10 @@ footer p, footer a, footer li {
   
 .program-list ul {
   padding-bottom: 30px;
+}
+
+.program-list li {
+  margin-top: 5px;
 }
 
 .program-list li a {
@@ -781,14 +804,14 @@ footer p, footer a, footer li {
   text-decoration: none;
   border-bottom: 2px solid #FF4C47;
   }
-   
-.program-list li {
-  margin-top: 5px;
+  
+.program-list li a.active {
+  color:#bebebe;
 }
 
 /* Student Overlay Slideshow */
 #slideshow {
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   text-align: center;
   min-height: 200px;
   max-height: 600px;
@@ -847,17 +870,16 @@ footer p, footer a, footer li {
 .carousel-control .glyphicon-chevron-left {left: 10%;}
 .carousel-control .glyphicon-chevron-right {right: 10%;}
 
-.showtime {
-  margin-bottom: 20px;
+.carousel-indicators {
+  bottom: -45px;
 }
 
-.showtime p.lead {
-  margin-bottom: 0;
+.carousel-indicators li {
+  border: 1px solid #FF4C47;
+  border-radius: 10px;
 }
 
-.imgwrap img {
-  width: 100%;
-  max-width: 100%;
-  margin-top: -175px;
+.carousel-indicators .active {
+  background-color: #FF4C47;
 }
 
