--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -332,7 +332,7 @@ nav a:active {
   text-decoration: none;
 }
   
-.mainnav > li > a {
+.mainnav ul.nav > li > a {
   color:#000;
   border-radius: 0;
   margin: 0;
