--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -713,8 +713,8 @@ footer p, footer a, footer li {
   margin-bottom: .66em;
 }
 
+.student-links li { margin-bottom: 5px; }
 .student-links li a {
-  display: block;
   color: #000;
   padding: 0;
   padding-top: 16px;
