--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -174,6 +174,7 @@ a,
 .menu_links,
 .student.thumb,
 .program-list li,
+#galleries-data ul li,
 .student-overlay .student-info ul.student-nav li {
   cursor: pointer;
 }
@@ -443,9 +444,6 @@ div.input-group {
   margin-top:-15px;
 }
 
-#galleries-data ul {
-  cursor: pointer;
-}
 
 /* Main Content Styles ******************/
 main article {
