--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -139,18 +139,18 @@ p {
   padding: 0;
 }
 
-p a {
+p a, h5 a {
   color:inherit;
   border-bottom: 2px solid #bebebe;
 }
   
-p a:hover {
+p a:hover, h5 a:hover  {
   color:inherit;
   text-decoration: none;
   border-bottom: 2px solid #FF4C47;
 }
   
-p a:active {
+p a:active, h5 a:active  {
   color:#FF4C47;
   text-decoration: none;
   border-bottom: 2px solid #FF4C47;
@@ -188,6 +188,8 @@ body { padding-top: 60px; }
 }
 
 main { position: relative; }
+
+.add-top {margin-top: 6px;}
 
 /* Image Header Styles ******************/
 header {
