--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -512,6 +512,24 @@ main article {
   margin: 0; 
   color:black;
 }
+
+@media only screen and (max-width: 1200px) {
+  #schedule .small {
+  padding-right: 120px;
+  }
+  }
+  
+@media only screen and (max-width: 980px) {
+  #schedule .small {
+  padding-right: 0px;
+  }
+  }
+  
+@media only screen and (max-width: 768px) {
+  .showtime .text-right{
+  text-align: left;
+  }
+  }
   
 #schedule .red  {  
   color: #FF4C47;
