--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -856,12 +856,21 @@ footer p, footer a, footer li {
 }
 
 /* Student Overlay Slideshow */
-#slideshow {
+#slideshow,
+#singleimg {
   margin-bottom: 50px;
   text-align: center;
   min-height: 200px;
   max-height: 600px;
   }
+
+#singleimg img {
+  max-height: 100%;
+  max-width: 100%;
+  height: auto;
+  width: auto;
+  }
+  
 
 .carousel-inner,  
 .carousel-inner > .item {
