removed left margin from single image
so it aligns with text

--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -861,6 +861,7 @@ footer p, footer a, footer li {
 /* Student Overlay Slideshow */
 #slideshow,
 #singleimg {
+  margin-left: 0px;
   margin-bottom: 50px;
   text-align: center;
   min-height: 200px;
