Add pointer over showtimes

--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -179,6 +179,7 @@ a,
 .student.thumb,
 .program-list li,
 #galleries-data ul li,
+li.showtimes,
 .student-overlay .student-info ul.student-nav li {
   cursor: pointer;
 }
