--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -872,8 +872,70 @@ footer p, footer a, footer li {
   margin-bottom: 50px;
   text-align: center;
   min-height: 200px;
-  max-height: 600px;
+  max-height: 200px;
   }
+
+.carousel-inner,  
+.carousel-inner > .item {
+  height: 200px;
+  text-align: center;
+  }
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  #slideshow,
+  #singleimg {
+    margin-left: 0px;
+    margin-bottom: 50px;
+    text-align: center;
+    min-height: 200px;
+    max-height: 400px;
+    }
+  
+  .carousel-inner,  
+  .carousel-inner > .item {
+    height: 400px;
+    text-align: center;
+    }
+  
+}
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  #slideshow,
+  #singleimg {
+    margin-left: 0px;
+    margin-bottom: 50px;
+    text-align: center;
+    min-height: 200px;
+    max-height: 500px;
+    }
+  
+  .carousel-inner,  
+  .carousel-inner > .item {
+    height: 500px;
+    text-align: center;
+    }
+  
+}
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  #slideshow,
+  #singleimg {
+    margin-left: 0px;
+    margin-bottom: 50px;
+    text-align: center;
+    min-height: 200px;
+    max-height: 600px;
+    }
+  
+  .carousel-inner,  
+  .carousel-inner > .item {
+    height: 600px;
+    text-align: center;
+    }
+}
 
 #singleimg img {
   max-height: 100%;
@@ -882,16 +944,6 @@ footer p, footer a, footer li {
   width: auto;
   }
 
-.carousel-inner,  
-.carousel-inner > .item {
-  height: 600px;
-  text-align: center;
-  }
-
-.carousel-inner > .item {
-  text-align: center;
-}
- 
 .carousel-inner > .item:before {
   content: '';
   display: inline-block;
