--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -1035,3 +1035,20 @@ footer p, footer a, footer li {
   background-color: #FF4C47;
 }
 
+/* * Filter results printout * */
+#active-filter {
+  position: relative;
+  top: -15px;
+  font-size: 1.5em;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
+#active-filter button {
+  margin-left: 7px;
+  background: transparent;
+  color: #FF4C47;
+  border-color: #FF4C47;
+  border-width: 1px;
+}
+
