improved caption hover solution?

--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -1044,7 +1044,7 @@ footer p, footer a, footer li {
   color: #fff !important;
 }
 
-#slideshow:hover .carousel-caption {
+.item:hover .carousel-caption {
   display: block;
 }
 
