--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -966,8 +966,7 @@ footer p, footer a, footer li {
 /* http://css-tricks.com/centering-in-the-unknown/ - this is what I used for vertical centering... works like a charm! */
 /* here is some other info too: http://gtwebdev.com/workshop/vcenter/vcenter-inline-css.php */
 
-.carousel-inner > .item:before,
-.carousel-caption .inner {
+.carousel-inner > .item:before {
   content: '';
   display: inline-block;
   height: 100%; 
@@ -976,8 +975,7 @@ footer p, footer a, footer li {
  }
 
 .carousel-inner > .item > img, 
-.carousel-inner > .item > a > img,
-.carousel-caption .inner .info {
+.carousel-inner > .item > a > img {
   display: inline-block;
   vertical-align: middle;
   max-height: 100%;
@@ -1040,10 +1038,9 @@ footer p, footer a, footer li {
 .carousel-caption {
   background: rgba(255,76,71,.5);
   display: none;
-  top:0;
   right: 0;
-  bottom: 0;
   left: 0;
+  bottom: 0;
   color: #fff !important;
   text-shadow: none;
 }
