--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -1036,6 +1036,7 @@ footer p, footer a, footer li {
 }
 
 .carousel-caption {
+  background: #FF4C47;
   background: rgba(255,76,71,.77);
   display: none;
   right: 0;
