--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -1047,7 +1047,7 @@ footer p, footer a, footer li {
 }
 
 .item:hover .carousel-caption,
-.singleimg:hover .carousel-caption {
+#singleimg:hover .carousel-caption {
   display: block;
 }
 
