--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -1032,7 +1032,7 @@ footer p, footer a, footer li {
   background-color: #ccc;
 }
 
-.carousel-indicators .active li {
+.carousel-indicators .active {
   background-color: #FF4C47;
 }
 
@@ -1068,17 +1068,17 @@ footer p, footer a, footer li {
   font-size: 1.5em;
   font-weight: 700;
   letter-spacing: 1px;
-}
+  }
 
 #active-filter button {
   margin-left: 7px;
   background-color: #ccc;
   color: #FF4C47;
   border: 0px;
-}
+  }
 
 #active-filter button:hover, #active-filter button:active {
   background-color: #FF4C47;
   color: #fff;
-}
+  }
 
