--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -1072,9 +1072,8 @@ footer p, footer a, footer li {
 
 #active-filter button {
   margin-left: 7px;
-  background: transparent;
+  background: none;
   color: #FF4C47;
-  border-color: #FF4C47;
-  border-width: 1px;
+  border-color: none;
 }
 
