--- a/css/mfa2014.css
+++ b/css/mfa2014.css
@@ -909,10 +909,15 @@ footer p, footer a, footer li {
   position: relative;
   }
 
+#slideshow img,
 #singleimg img {
   height: auto;
   width: 100%;
+  max-height: 100%;
+  max-width: 100%;
   }
+  
+#singleimg img { display: block; margin: 0 auto; }
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) {
@@ -920,7 +925,6 @@ footer p, footer a, footer li {
   #singleimg {
     margin-left: 0px;
     margin-bottom: 50px;
-    text-align: center;
     min-height: 200px;
     max-height: 400px;
     height: auto;
@@ -934,9 +938,7 @@ footer p, footer a, footer li {
     }
 
   #singleimg img {
-    max-height: 100%;
-    max-width: 100%;
-    height: auto;
+    height: 100%;
     width: auto;
     }
 
